<resources>
    <string name="app_name">Relaxleep</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Relaxleep App</string>
    <string name="nav_header_subtitle">KHU, KJH, LGH</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Relaxleep</string>
    <string name="menu_sleep">하루수면량</string>
    <string name="menu_chart">수면차트</string>
    <string name="menu_environment">환경정보</string>
    <string name="menu_music">음원재생</string>
    <string name="menu_streaming">스트리밍</string>
    <string name="menu_guide">영아수면법</string>

    <string name="fragment_sleep_label1">예상 수면시간</string>
    <string name="fragment_sleep_label2">총 수면시간</string>

    <string name="fragment_chart_label1">실제 수면시간</string>
    <string name="fragment_chart_label2">평균 수면시간</string>
    <string name="fragment_chart_label3">수면 정보</string>
</resources>
