<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_launcher_foreground"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_sleep"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_sleep" />
        <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_show_chart_black_24dp"
            android:title="@string/menu_chart" />
        <item
            android:id="@+id/nav_environment"
            android:icon="@drawable/ic_ac_unit_black_24dp"
            android:title="@string/menu_environment" />
        <item
            android:id="@+id/nav_music"
            android:icon="@drawable/ic_music_note_black_24dp"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_streaming"
            android:icon="@drawable/ic_camera_alt_black_24dp"
            android:title="@string/menu_streaming" />
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/ic_child_friendly_black_24dp"
            android:title="@string/menu_guide" />
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            -->
<!--        </menu>-->
<!--    </item>-->

</menu>
